test/files/neg/t7289_status_quo.check
t7289_status_quo.scala:9: error: diverging implicit expansion for type Test1.Ext[List[Int]]
starting with value m in object Test1
  implicitly[Ext[List[Int]]]                    // fails - not found (as expected)
            ^
one error found
